added soul and basalt variants to ores

--- a/common/src/main/resources/assets/bno/lang/en_us.json
+++ b/common/src/main/resources/assets/bno/lang/en_us.json
@@ -46,22 +46,56 @@
     "block.bno.raw_uranium_block": "Raw Uranium Block",
     "block.bno.raw_zinc_block": "Raw Zinc Block",
 
-    "block.bno.nether_aluminum_ore": "Nether Aluminum Ore",
-    "block.bno.nether_copper_ore": "Nether Copper Ore",
-    "block.bno.nether_lead_ore": "Nether Lead Ore",
-    "block.bno.nether_nickel_ore": "Nether Nickel Ore",
-    "block.bno.nether_silver_ore": "Nether Silver Ore",
-    "block.bno.nether_tin_ore": "Nether Tin Ore",
-    "block.bno.nether_osmium_ore": "Nether Osmium Ore",
-    "block.bno.nether_uranium_ore": "Nether Uranium Ore",
-    "block.bno.nether_zinc_ore": "Nether Zinc Ore",
+    "block.bno.nether_aluminum_ore": "Netherrack Aluminum Ore",
+    "block.bno.nether_copper_ore": "Netherrack Copper Ore",
+    "block.bno.nether_lead_ore": "Netherrack Lead Ore",
+    "block.bno.nether_nickel_ore": "Netherrack Nickel Ore",
+    "block.bno.nether_silver_ore": "Netherrack Silver Ore",
+    "block.bno.nether_tin_ore": "Netherrack Tin Ore",
+    "block.bno.nether_osmium_ore": "Netherrack Osmium Ore",
+    "block.bno.nether_uranium_ore": "Netherrack Uranium Ore",
+    "block.bno.nether_zinc_ore": "Netherrack Zinc Ore",
 
-    "block.bno.nether_emerald_ore": "Nether Emerald Ore",
-    "block.bno.nether_diamond_ore": "Nether Diamond Ore",
-    "block.bno.nether_redstone_ore": "Nether Redstone Ore",
-    "block.bno.nether_lapis_ore": "Nether Lapis Ore",
-    "block.bno.nether_coal_ore": "Nether Coal Ore",
-    "block.bno.nether_iron_ore": "Nether Iron Ore",
+    "block.bno.nether_emerald_ore": "Netherrack Emerald Ore",
+    "block.bno.nether_diamond_ore": "Netherrack Diamond Ore",
+    "block.bno.nether_redstone_ore": "Netherrack Redstone Ore",
+    "block.bno.nether_lapis_ore": "Netherrack Lapis Ore",
+    "block.bno.nether_coal_ore": "Netherrack Coal Ore",
+    "block.bno.nether_iron_ore": "Netherrack Iron Ore",
+
+    "block.bno.basalt_aluminum_ore": "Basalt Aluminum Ore",
+    "block.bno.basalt_copper_ore": "Basalt Copper Ore",
+    "block.bno.basalt_lead_ore": "Basalt Lead Ore",
+    "block.bno.basalt_nickel_ore": "Basalt Nickel Ore",
+    "block.bno.basalt_silver_ore": "Basalt Silver Ore",
+    "block.bno.basalt_tin_ore": "Basalt Tin Ore",
+    "block.bno.basalt_osmium_ore": "Basalt Osmium Ore",
+    "block.bno.basalt_uranium_ore": "Basalt Uranium Ore",
+    "block.bno.basalt_zinc_ore": "Basalt Zinc Ore",
+
+    "block.bno.basalt_emerald_ore": "Basalt Emerald Ore",
+    "block.bno.basalt_diamond_ore": "Basalt Diamond Ore",
+    "block.bno.basalt_redstone_ore": "Basalt Redstone Ore",
+    "block.bno.basalt_lapis_ore": "Basalt Lapis Ore",
+    "block.bno.basalt_coal_ore": "Basalt Coal Ore",
+    "block.bno.basalt_iron_ore": "Basalt Iron Ore",
+
+    "block.bno.soul_aluminum_ore": "Soul Aluminum Ore",
+    "block.bno.soul_copper_ore": "Soul Copper Ore",
+    "block.bno.soul_lead_ore": "Soul Lead Ore",
+    "block.bno.soul_nickel_ore": "Soul Nickel Ore",
+    "block.bno.soul_silver_ore": "Soul Silver Ore",
+    "block.bno.soul_tin_ore": "Soul Tin Ore",
+    "block.bno.soul_osmium_ore": "Soul Osmium Ore",
+    "block.bno.soul_uranium_ore": "Soul Uranium Ore",
+    "block.bno.soul_zinc_ore": "Soul Zinc Ore",
+
+    "block.bno.soul_emerald_ore": "Soul Emerald Ore",
+    "block.bno.soul_diamond_ore": "Soul Diamond Ore",
+    "block.bno.soul_redstone_ore": "Soul Redstone Ore",
+    "block.bno.soul_lapis_ore": "Soul Lapis Ore",
+    "block.bno.soul_coal_ore": "Soul Coal Ore",
+    "block.bno.soul_iron_ore": "Soul Iron Ore",
 
     "tooltip.netheremerald_ore.tip": "§fFound between y%s to y%s",
     "tooltip.netherdiamond_ore.tip": "§fFound between y%s to y%s",
