--- a/common/src/main/resources/assets/bno/lang/ru_ru.json
+++ b/common/src/main/resources/assets/bno/lang/ru_ru.json
@@ -10,7 +10,6 @@
   "item.bno.osmium_nugget": "Осмиевый кусочек",
 
   "item.bno.aluminum_ingot": "Алюминиевый слиток",
-  "item.bno.copper_ingot": "Медный слиток",
   "item.bno.lead_ingot": "Свинцовый слиток",
   "item.bno.nickel_ingot": "Никелевый слиток",
   "item.bno.silver_ingot": "Серебряный слиток",
@@ -19,7 +18,6 @@
   "item.bno.uranium_ingot": "Урановый слиток",
 
   "block.bno.aluminum_block": "Алюминиевый блок",
-  "block.bno.copper_block": "Медный блок",
   "block.bno.lead_block": "Свинцовый блок",
   "block.bno.nickel_block": "Никелевый блок",
   "block.bno.silver_block": "Серебряный блок",
@@ -27,22 +25,22 @@
   "block.bno.osmium_block": "Осмиевый блок",
   "block.bno.uranium_block": "Урановый блок",
 
-  "block.bno.netheraluminum_ore": "Алюминиевая руда Нижнего мира",
-  "block.bno.nethercopper_ore": "Медная руда Нижнего мира",
-  "block.bno.netherlead_ore": "Свинцовая руда Нижнего мира",
-  "block.bno.nethernickel_ore": "Никелевая руда Нижнего мира",
-  "block.bno.nethersilver_ore": "Серебряная руда Нижнего мира",
-  "block.bno.nethertin_ore": "Оловянная руда Нижнего мира",
-  "block.bno.netherosmium_ore": "Осмиевый руда Нижнего мира",
-  "block.bno.netheruranium_ore": "Урановая руда Нижнего мира",
+  "block.bno.nether_aluminum_ore": "Алюминиевая руда Нижнего мира",
+  "block.bno.nether_copper_ore": "Медная руда Нижнего мира",
+  "block.bno.nether_lead_ore": "Свинцовая руда Нижнего мира",
+  "block.bno.nether_nickel_ore": "Никелевая руда Нижнего мира",
+  "block.bno.nether_silver_ore": "Серебряная руда Нижнего мира",
+  "block.bno.nether_tin_ore": "Оловянная руда Нижнего мира",
+  "block.bno.nether_osmium_ore": "Осмиевый руда Нижнего мира",
+  "block.bno.nether_uranium_ore": "Урановая руда Нижнего мира",
 
-  "block.bno.netheremerald_ore": "Изумрудная руда Нижнего мира",
-  "block.bno.netherdiamond_ore": "Алмазная руда Нижнего мира",
-  "block.bno.netherredstone_ore": "Красная руда Нижнего мира",
-  "block.bno.netherlapis_ore": "Лазуритовая руда Нижнего мира",
-  "block.bno.nethercoal_ore": "Угольная руда Нижнего мира",
+  "block.bno.nether_emerald_ore": "Изумрудная руда Нижнего мира",
+  "block.bno.nether_diamond_ore": "Алмазная руда Нижнего мира",
+  "block.bno.nether_redstone_ore": "Красная руда Нижнего мира",
+  "block.bno.nether_lapis_ore": "Лазуритовая руда Нижнего мира",
+  "block.bno.nether_coal_ore": "Угольная руда Нижнего мира",
   
-  "block.bno.netheriron_ore": "Железная руда Нижнего мира",
+  "block.bno.nether_iron_ore": "Железная руда Нижнего мира",
 
   "tooltip.netheremerald_ore.tip": "§fНаходится между y{0} и y{1}",
   "tooltip.netherdiamond_ore.tip": "§fНаходится между y{0} и y{1}",
