--- a/common/src/main/resources/assets/bno/lang/ru_ru.json
+++ b/common/src/main/resources/assets/bno/lang/ru_ru.json
@@ -1,62 +1,85 @@
 {
-  "itemGroup.bno.basicnetherores": "Базовые руды Нижнего мира",
+    "itemGroup.bno.basicnetherores": "Basic Nether Ores",
 
-  "item.bno.aluminum_nugget": "Кусочек алюминия",
-  "item.bno.copper_nugget": "Кусочек меди",
-  "item.bno.lead_nugget": "Кусочек свинца",
-  "item.bno.nickel_nugget": "Кусочек никеля",
-  "item.bno.silver_nugget": "Кусочек серебра",
-  "item.bno.tin_nugget": "Кусочек олова",
-  "item.bno.osmium_nugget": "Осмиевый кусочек",
+    "item.bno.aluminum_nugget": "Кусочек алюминия",
+    "item.bno.copper_nugget": "Кусочек меди",
+    "item.bno.lead_nugget": "Кусочек свинца",
+    "item.bno.nickel_nugget": "Кусочек никеля",
+    "item.bno.silver_nugget": "Кусочек серебра",
+    "item.bno.tin_nugget": "Кусочек олова",
+    "item.bno.osmium_nugget": "Кусочек осмия",
+    "item.bno.zinc_nugget": "Кусочек цинка",
 
-  "item.bno.aluminum_ingot": "Алюминиевый слиток",
-  "item.bno.lead_ingot": "Свинцовый слиток",
-  "item.bno.nickel_ingot": "Никелевый слиток",
-  "item.bno.silver_ingot": "Серебряный слиток",
-  "item.bno.tin_ingot": "Оловянный слиток",
-  "item.bno.osmium_ingot": "Осмиевый слиток",
-  "item.bno.uranium_ingot": "Урановый слиток",
+    "item.bno.aluminum_ingot": "Алюминиевый слиток",
+    "item.bno.copper_ingot": "Медный слиток",
+    "item.bno.lead_ingot": "Свинцовый слиток",
+    "item.bno.nickel_ingot": "Никелевый слиток",
+    "item.bno.silver_ingot": "Серебряный слиток",
+    "item.bno.tin_ingot": "Оловянный слиток",
+    "item.bno.osmium_ingot": "Осмиевый слиток",
+    "item.bno.uranium_ingot": "Урановый слиток",
+    "item.bno.zinc_ingot": "Цинковый слиток",
 
-  "block.bno.aluminum_block": "Алюминиевый блок",
-  "block.bno.lead_block": "Свинцовый блок",
-  "block.bno.nickel_block": "Никелевый блок",
-  "block.bno.silver_block": "Серебряный блок",
-  "block.bno.tin_block": "Оловянный блок",
-  "block.bno.osmium_block": "Осмиевый блок",
-  "block.bno.uranium_block": "Урановый блок",
+    "item.bno.raw_aluminum": "Рудный алюминий",
+    "item.bno.raw_lead": "Рудный свинец",
+    "item.bno.raw_nickel": "Рудный никель",
+    "item.bno.raw_silver": "Рудное серебро",
+    "item.bno.raw_tin": "Рудное олово",
+    "item.bno.raw_osmium": "Рудный осмий",
+    "item.bno.raw_uranium": "Рудный уран",
+    "item.bno.raw_zinc": "Рудный цинк",
 
-  "block.bno.nether_aluminum_ore": "Алюминиевая руда Нижнего мира",
-  "block.bno.nether_copper_ore": "Медная руда Нижнего мира",
-  "block.bno.nether_lead_ore": "Свинцовая руда Нижнего мира",
-  "block.bno.nether_nickel_ore": "Никелевая руда Нижнего мира",
-  "block.bno.nether_silver_ore": "Серебряная руда Нижнего мира",
-  "block.bno.nether_tin_ore": "Оловянная руда Нижнего мира",
-  "block.bno.nether_osmium_ore": "Осмиевый руда Нижнего мира",
-  "block.bno.nether_uranium_ore": "Урановая руда Нижнего мира",
+    "block.bno.aluminum_block": "Алюминиевый блок",
+    "block.bno.lead_block": "Свинцовый блок",
+    "block.bno.nickel_block": "Никелевый блок",
+    "block.bno.silver_block": "Серебряный блок",
+    "block.bno.tin_block": "Оловянный блок",
+    "block.bno.osmium_block": "Осмиевый блок",
+    "block.bno.uranium_block": "Урановый блок",
+    "block.bno.zinc_block": "Цинковый блок",
 
-  "block.bno.nether_emerald_ore": "Изумрудная руда Нижнего мира",
-  "block.bno.nether_diamond_ore": "Алмазная руда Нижнего мира",
-  "block.bno.nether_redstone_ore": "Красная руда Нижнего мира",
-  "block.bno.nether_lapis_ore": "Лазуритовая руда Нижнего мира",
-  "block.bno.nether_coal_ore": "Угольная руда Нижнего мира",
-  
-  "block.bno.nether_iron_ore": "Железная руда Нижнего мира",
+    "block.bno.raw_aluminum_block": "Блок рудного алюминия",
+    "block.bno.raw_lead_block": "Блок рудного свинца",
+    "block.bno.raw_nickel_block": "Блок рудного никеля",
+    "block.bno.raw_silver_block": "Блок рудного серебра",
+    "block.bno.raw_tin_block": "Блок рудного олова",
+    "block.bno.raw_osmium_block": "Блок рудного осмия",
+    "block.bno.raw_uranium_block": "Блок рудного урана",
+    "block.bno.raw_zinc_block": "Блок рудного цинка",
 
-  "tooltip.netheremerald_ore.tip": "§fНаходится между y{0} и y{1}",
-  "tooltip.netherdiamond_ore.tip": "§fНаходится между y{0} и y{1}",
-  "tooltip.netherredstone_ore.tip": "§fНаходится между y{0} и y{1}",
-  "tooltip.netherlapis_ore.tip": "§fНаходится между y{0} и y{1}",
-  "tooltip.nethercoal_ore.tip": "§fНаходится между y{0} и y{1}",
-  "tooltip.nethergold_ore.tip": "§fНаходится между y{0} и y{1}",
-  "tooltip.nethersilver_ore.tip": "§fНаходится между y{0} и y{1}",
-  "tooltip.netheriron_ore.tip": "§fНаходится между y{0} и y{1}",
-  "tooltip.netherlead_ore.tip": "§fНаходится между y{0} и y{1}",
-  "tooltip.nethernickel_ore.tip": "§fНаходится между y{0} и y{1}",
-  "tooltip.nethercopper_ore.tip": "§fНаходится между y{0} и y{1}",
-  "tooltip.netheraluminum_ore.tip": "§fНаходится между y{0} и y{1}",
-  "tooltip.nethertin_ore.tip": "§fНаходится между y{0} и y{1}",
-  "tooltip.netherosmium_ore.tip": "§fНаходится между y{0} и y{1}",
-  "tooltip.netheruranium_ore.tip": "§fНаходится между y{0} и y{1}",
-  "tooltip.config.tip": "§4§oГенерация в мире отключена — включается через файл конфигурации"
+    "block.bno.nether_aluminum_ore": "Незерская алюминиевая руда",
+    "block.bno.nether_copper_ore": "Незерская медная руда",
+    "block.bno.nether_lead_ore": "Незерская свинцовая руда",
+    "block.bno.nether_nickel_ore": "Незерская никелевая руда",
+    "block.bno.nether_silver_ore": "Незерская серебряная руда",
+    "block.bno.nether_tin_ore": "Незерская оловянная руда",
+    "block.bno.nether_osmium_ore": "Незерская осмиевая руда",
+    "block.bno.nether_uranium_ore": "Незерская урановая руда",
+    "block.bno.nether_zinc_ore": "Незерская цинковая руда",
+
+    "block.bno.nether_emerald_ore": "Незерская изумрудная руда",
+    "block.bno.nether_diamond_ore": "Незерская алмазная руда",
+    "block.bno.nether_redstone_ore": "Незерская редстоуновая руда",
+    "block.bno.nether_lapis_ore": "Незерская лазуритовая руда",
+    "block.bno.nether_coal_ore": "Незерская угольная руда",
+    "block.bno.nether_iron_ore": "Незерская железная руда",
+
+    "tooltip.netheremerald_ore.tip": "§fНаходится между y%s и y%s",
+    "tooltip.netherdiamond_ore.tip": "§fНаходится между y%s и y%s",
+    "tooltip.netherredstone_ore.tip": "§fНаходится между y%s и y%s",
+    "tooltip.netherlapis_ore.tip": "§fНаходится между y%s и y%s",
+    "tooltip.nethercoal_ore.tip": "§fНаходится между y%s и y%s",
+    "tooltip.nethergold_ore.tip": "§fНаходится между y%s и y%s",
+    "tooltip.nethersilver_ore.tip": "§fНаходится между y%s и y%s",
+    "tooltip.netheriron_ore.tip": "§fНаходится между y%s и y%s",
+    "tooltip.netherlead_ore.tip": "§fНаходится между y%s и y%s",
+    "tooltip.nethernickel_ore.tip": "§fНаходится между y%s и y%s",
+    "tooltip.nethercopper_ore.tip": "§fНаходится между y%s и y%s",
+    "tooltip.netheraluminum_ore.tip": "§fНаходится между y%s и y%s",
+    "tooltip.nethertin_ore.tip": "§fНаходится между y%s и y%s",
+    "tooltip.netherosmium_ore.tip": "§fНаходится между y%s и y%s",
+    "tooltip.netheruranium_ore.tip": "§fНаходится между y%s и y%s",
+    "tooltip.netherzinc_ore.tip": "§fНаходится между y%s и y%s",
+    "tooltip.config.tip": "§4§oГенерация в мире отключена — включается через файл конфигурации"
 
 }
